@@ -6,25 +6,27 @@
 
 /* verilator lint_off COVERIGN */
 class myClass;
-    covergroup embeddedCg;
+  covergroup embeddedCg;
 
-    endgroup
+  endgroup
 
-    function new();
-        embeddedCg = new();
-        embeddedCg.sample();
-        embeddedCg.get_coverage();
-    endfunction
+  function new();
+    real r;
+    embeddedCg = new();
+    embeddedCg.sample();
+    r = embeddedCg.get_coverage();
+  endfunction
 endclass
 
 class secondClass;
-    covergroup embeddedCg;
+  covergroup embeddedCg;
 
-    endgroup
+  endgroup
 
-    function new();
-        embeddedCg = new();
-        embeddedCg.sample();
-        embeddedCg.get_coverage();
-    endfunction
+  function new();
+    real r;
+    embeddedCg = new();
+    embeddedCg.sample();
+    r = embeddedCg.get_coverage();
+  endfunction
 endclass
