@@ -18,6 +18,7 @@ Verilator 5.041 devel
 * Fix cmake APPLE variable (#6351). [Lan Zongwei]
 * Fix randomize local after parameters applied (#6371). [Alex Solomatnikov]
 * Fix package imports not found after parameters applied (#6373). [Alex Solomatnikov]
+* Fix COVERAGEIGN-ignored `get_inst_coverage` and other covergroup methods (#6383). [Alex Solomatnikov]
 
 
 Verilator 5.040 2025-08-30
